--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chokidar": "^3.5.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "passport": "^0.5.0",
